# qa-service-api

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
docker/: Dockerfile
src/: env.py  main.py  prestart.sh
src/api/: __init__.py  answers.py  questions.py
src/core/: schemes.py  service.py  settings.py
src/database/: db.py  helper.py  models.py  query.py
tests/: conftest.py  test_api.py
